Fixed bug in the thumbnail image wrapper alignment. Many callers were counting on the buggy behavior, so had to patch them as well. Also bumped the thumb size on the main results page to 80 px, and made related adjustments. I think there is a lot of white space around the thumbs, still.

--- a/trunk/themes/pahma/style/style.css
+++ b/trunk/themes/pahma/style/style.css
@@ -496,9 +496,9 @@ div.front_set a:active img {
 	background: #FFF;
 	float:left;
 	margin:10px 0px 0px 10px;
-	width:80px;
-	height:109px;
-	padding:10px 10px 5px 5px;
+	width:100px;
+	height:119px;
+	padding:10px 5px 5px 5px;
 	border: 1px solid #cdcdc9;
 	overflow:hidden;
 }
